--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-22.32MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-459.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-19.39MB/s(Youtube:不良林), server: zf1.333210.xyz, port: 40383, type: vmess, uuid: 04e1a3ce-9921-40db-a9eb-9f754491e111, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /bby, ws-headers: {Host: zf1.333210.xyz}}
-  - {name: 🇬🇧 英国-3.45MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-9.46MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.62MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.66MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-922.2KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-329.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-406.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
