--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.14MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-520.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-922.2KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-544.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-156.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-366.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-329.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-406.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-922.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.0KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
