--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 45.144.176.135, port: 3001, type: ss, cipher: aes-256-cfb, password: qazplmn1236547dr42q}
-  - {name: 🇸🇬 新加坡-1.21MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-1.80MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇮🇹 意大利-1.35MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-278.9KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
